kube/pieline/pi18n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi18n
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi18n
  template:
    metadata:
      labels:
        app: pi18n
    spec:
      containers:
        - name: pi18n
          image: dreg.local/pi18n
          ports:
            - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: pi18n
spec:
  selector:
    app: pi18n
  ports:
    - port: 6000
