kube/pieline/pie-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-auth
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-auth
  template:
    metadata:
      labels:
        app: pie-auth
    spec:
      containers:
        - name: pie-auth
          image: dreg.local/pie-auth
        - name: db-auth
          image: oscarfonts/h2
          volumeMounts:
            - name: pie-auth
              mountPath: /opt/h2-data
      volumes:
        - name: pie-auth
          persistentVolumeClaim:
            claimName: pie-auth
---
apiVersion: v1
kind: Service
metadata:
  name: pie-auth
spec:
  selector:
    app: pie-auth
  ports:
    - port: 80
