kube/pieline/pie-gate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-gate
  template:
    metadata:
      labels:
        app: pie-gate
    spec:
      containers:
        - name: pie-gate
          image: dreg.local/pie-gate
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pie-gate
spec:
  selector:
    app: pie-gate
  ports:
    - port: 5000
