kube/pieline/pie-proj.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-proj
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-proj
  template:
    metadata:
      labels:
        app: pie-proj
    spec:
      containers:
        - name: pie-proj
          image: dreg.local/pie-proj
          ports:
            - containerPort: 5003
        - name: db-proj
          image: oscarfonts/h2
          volumeMounts:
            - name: pie-proj
              mountPath: /opt/h2-data
      volumes:
        - name: pie-proj
          persistentVolumeClaim:
            claimName: pie-proj
---
apiVersion: v1
kind: Service
metadata:
  name: pie-proj
spec:
  selector:
    app: pie-proj
  ports:
    - port: 5003
