kube/pieline/pie-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-users
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-users
  template:
    metadata:
      labels:
        app: pie-users
    spec:
      containers:
        - name: pie-users
          image: dreg.local/pie-users
        - name: db-users
          image: postgres
          volumeMounts:
            - name: pie-users
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pie-users
          persistentVolumeClaim:
            claimName: pie-users
---
apiVersion: v1
kind: Service
metadata:
  name: pie-users
spec:
  selector:
    app: pie-users
  ports:
    - port: 80
