kube/pieline/pie-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pie-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pie-web
  template:
    metadata:
      labels:
        app: pie-web
    spec:
      containers:
        - name: pie-web
          image: dreg.local/pie-web
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: pie-web
spec:
  selector:
    app: pie-web
  ports:
    - port: 7000
