kube/pieline/ingress-pieline.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pieline
spec:
  rules:
    - host: pieline.local
      http:
        paths:
          - backend:
              service:
                name: pie-web
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: pieline.api.local
      http:
        paths:
          - backend:
              service:
                name: pie-gate
                port:
                  number: 80
            path: /
            pathType: Prefix
